[package]
name = "smt-rocksdb-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { package = "ckb-rocksdb", version = "0.18", default-features = false, features = ["snappy", "march-native"] }
sparse-merkle-tree = { git = "https://github.com/nervosnetwork/sparse-merkle-tree", branch = "quake/split-store-trait" }

[dev-dependencies]
blake2b-rs = "0.2"
tempfile = "3.0"
